# lightning

./: .gitignore  .gitmodules  CMakeLists.txt  COMPILE.md  README.md  close_tx.c  close_tx.h  config.h  version.c
bitcoin/: CMakeLists.txt  address.h  base58.c  base58.h  locktime.c  pubkey.c  pubkey.h  script.c  script.h  shadouble.c  signature.c  signature.h  simple.c  simple.h  tx.c
btcnetwork/: CMakeLists.txt
btcnetwork/c/: bitcoind.c  bitcoind.h  chaintopology.c  chaintopology.h  watch.c  watch.h
build-android/: ccan_config.h
build-vs/: build.sln  config.h  libsecp256k1-config.h  unistd.h
build-vs/bitcoin/: bitcoin.vcxproj
build-vs/btcnetwork/: btcnetwork.vcxproj  btcnetwork.vcxproj.filters
build-vs/ccan/: ReadMe.txt  ccan.vcxproj
build-vs/global/: ReadMe.txt  global.vcxproj  global.vcxproj.filters
build-vs/lightningcli/: ReadMe.txt  lightningcli.vcxproj  lightningcli.vcxproj.filters
build-vs/lightningd/: ReadMe.txt
build-vs/lightningdummy/: lightningdummy.vcxproj.filters
build-vs/sqlite/: sqlite.vcxproj.filters
build-vs/utils/: utils.vcxproj
ccan/: CMakeLists.txt
ccan/ccan/autodata/: autodata.c  autodata.h
ccan/ccan/autodata/test/: helper.c
ccan/ccan/cppmagic/test/: run.c
ccan/ccan/crypto/ripemd160/: ripemd160.c
ccan/ccan/crypto/sha256/: sha256.c
ccan/ccan/crypto/siphash24/: siphash24.c
ccan/ccan/opt/: helpers.c  usage.c
ccan/ccan/ptr_valid/: ptr_valid.c
ccan/ccan/tal/: tal.c
ccan/ccan/tal/str/: str.c
ccan/ccan/time/: time.c  time.h
ccan/ccan/timer/: timer.c  timer.h
daemon/: bitcoind.c  bitcoind.h  db.c  lightningd.c  lightningd.h  options.c  peer.c  peer.h  secrets.c  wallet.c  wallet.h
daemon/test/: test-payback
doc/: lightning-waitanyinvoice.7
include/: lnchannel_api.h  lnchannel_struct.h
include/ios/: ccan_config.h
include/msvs/: ccan_config.h
libwally-core/: CMakeLists.txt
libwally-core/include/: wally_crypto.h
libwally-core/src/: hmac.c  hmac.h  internal.h  pbkdf2.c  sign.c
libwally-core/src/ccan/ccan/tap/: tap.c
libwally-core/src/cpufeatures/: cpu-features.c
libwally-core/src/scrypt/: crypto_scrypt.c
lightningcore/: CMakeLists.txt  chaintopology.h  channel.c  channel.h  close_tx.c  commit_tx.c  commit_tx.h  db.c  db.h  failure.c  failure.h  feechange.c  feechange.h  htlc.c  htlc.h  lnchannel.c  lnchannel.h  lnchannel_api.c  lnchannel_api.h  lnchannel_commit.c  lnchannel_htlc.c  lnchannel_internal.h  lnchannel_open.c  lnchannel_redeem.c  log.c  log.h  names.c  names.h  output_to_htlc.c  output_to_htlc.h  pseudorand.c  secrets.c  secrets.h  state.h  state_types.h
lightninglite/: CMakeLists.txt  chain_dummy.cpp  dummy.h  lite_demo.cpp  lite_demo.h  lite_dummy.cpp  lite_task.h  manager_dummy.cpp  manager_st.cpp  manager_st.h  message_demo.cpp  message_demo.h  message_dummy.cpp  message_test.cpp  payment_dummy.cpp  payment_st.cpp  payment_st.h  watch_demo.cpp  watch_demo.h  watch_dummy.cpp
lightninglite/c/: manager.h  message.h  payment.h
protos/: peer.proto
scripts/: build-android.sh  build-linux.sh  build-mac.sh  build-windows-mingw64.sh  build-windows-msvs.bat
scripts/ios/lightning/lightning/: lightning.h  lightning.m
scripts/ios/lightning/lightning.xcodeproj/: project.pbxproj
scripts/ios/lightning/lightning.xcodeproj/xcuserdata/dinstein.xcuserdatad/xcschemes/: xcschememanagement.plist
sqlite3/: CMakeLists.txt
test/: channel_open.cpp  test.cpp
utils/: CMakeLists.txt  type_to_string.c  type_to_string.h  utils.c  utils.h
utils/sodium/: export.h
